update array jupter notes add 3D and 4D array

--- a/01_Array.ipynb
+++ b/01_Array.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
       "The memorysize of each element of arr2D is: 8 bytes\n",
       "The memory size of numpy array arr2D is: 96 bytes\n",
       "[65 10 37 89]\n",
-      "10\n"
+      "[68 68 10]\n"
      ]
     }
    ],
@@ -93,6 +93,70 @@
     "print(\"The memory size of numpy array arr2D is:\",arr2D.itemsize*arr2D.size,\"bytes\")\n",
     "print( arr2D[:, 2] )\n",
     "print( arr2D[1, :] )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3D Array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[45, 48, 65, 68, 68],\n",
+       "        [10, 84, 22, 37, 88],\n",
+       "        [71, 89, 89, 13, 59],\n",
+       "        [66, 40, 88, 47, 89]],\n",
+       "\n",
+       "       [[82, 38, 26, 78, 73],\n",
+       "        [10, 21, 81, 70, 80],\n",
+       "        [48, 65, 83, 89, 50],\n",
+       "        [30, 20, 20, 15, 40]],\n",
+       "\n",
+       "       [[33, 66, 10, 58, 33],\n",
+       "        [32, 75, 24, 36, 76],\n",
+       "        [56, 29, 35,  1,  1],\n",
+       "        [37, 54,  6, 39, 18]]])"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "np.random.seed(0)\n",
+    "arr3D = np.array( np.random.randint(1,100, size=(3, 4, 5)), dtype=int)\n",
+    "arr3D"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4D Array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "np.random.seed(0)\n",
+    "arr4D = np.array( np.random.randint(1,100, size=(2, 3, 4, 5)), dtype=int)\n",
+    "arr4D"
    ]
   }
  ],
