--- a/01_Array.ipynb
+++ b/01_Array.ipynb
@@ -148,9 +148,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[[45, 48, 65, 68, 68],\n",
+       "         [10, 84, 22, 37, 88],\n",
+       "         [71, 89, 89, 13, 59],\n",
+       "         [66, 40, 88, 47, 89]],\n",
+       "\n",
+       "        [[82, 38, 26, 78, 73],\n",
+       "         [10, 21, 81, 70, 80],\n",
+       "         [48, 65, 83, 89, 50],\n",
+       "         [30, 20, 20, 15, 40]],\n",
+       "\n",
+       "        [[33, 66, 10, 58, 33],\n",
+       "         [32, 75, 24, 36, 76],\n",
+       "         [56, 29, 35,  1,  1],\n",
+       "         [37, 54,  6, 39, 18]]],\n",
+       "\n",
+       "\n",
+       "       [[[80,  5, 43, 59, 32],\n",
+       "         [ 2, 66, 42, 58, 36],\n",
+       "         [12, 47, 83, 92,  1],\n",
+       "         [15, 54, 13, 43, 85]],\n",
+       "\n",
+       "        [[76, 69,  7, 69, 48],\n",
+       "         [ 4, 77, 53, 79, 16],\n",
+       "         [21, 59, 24, 80, 14],\n",
+       "         [86, 49, 50, 70, 42]],\n",
+       "\n",
+       "        [[36, 65, 96, 70, 95],\n",
+       "         [ 1, 51, 37, 35, 49],\n",
+       "         [94,  4, 99, 43, 78],\n",
+       "         [22, 74,  1, 11, 44]]]])"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
