update array notes

--- a/01_Array.ipynb
+++ b/01_Array.ipynb
@@ -54,6 +54,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[128, 128, 128, 128, 128],\n",
+       "       [128, 128, 128, 128, 128],\n",
+       "       [128, 128, 128, 128, 128],\n",
+       "       [128, 128, 128, 128, 128],\n",
+       "       [128, 128, 128, 128, 128]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "arr = np.ones( (5, 5), dtype=int) * 128\n",
+    "arr"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -271,6 +298,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[[45, 48, 65, 68, 68],\n",
+       "  [10, 84, 22, 37, 88],\n",
+       "  [71, 89, 89, 13, 59],\n",
+       "  [66, 40, 88, 47, 89],\n",
+       "  [82, 38, 26, 78, 73]],\n",
+       " [[10, 21, 81, 70, 80],\n",
+       "  [48, 65, 83, 100, 89],\n",
+       "  [50, 30, 20, 20, 15],\n",
+       "  [40, 33, 66, 10, 58],\n",
+       "  [33, 32, 75, 24, 36]],\n",
+       " [[76, 56, 29, 35, 1],\n",
+       "  [1, 37, 54, 6, 39],\n",
+       "  [18, 80, 5, 43, 59],\n",
+       "  [32, 2, 66, 42, 58],\n",
+       "  [36, 12, 47, 83, 92]],\n",
+       " [[1, 15, 100, 54, 13],\n",
+       "  [43, 85, 76, 69, 7],\n",
+       "  [69, 48, 4, 77, 53],\n",
+       "  [79, 16, 21, 100, 59],\n",
+       "  [24, 80, 14, 86, 49]],\n",
+       " [[50, 70, 42, 36, 65],\n",
+       "  [96, 70, 95, 1, 51],\n",
+       "  [37, 35, 49, 94, 4],\n",
+       "  [99, 43, 78, 22, 74],\n",
+       "  [1, 11, 44, 59, 24]]]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "lst3D = [ None ] * 5\n",
+    "np.random.seed(0)\n",
+    "for i in range(5):\n",
+    "    lst3D[i] = [ None ] * 5\n",
+    "    for j in range(5):\n",
+    "        lst3D[i][j] = [ np.random.randint(1, 101) for j in range(5) ]\n",
+    "lst3D\n",
+    "# print(lst2D)\n",
+    "# lst2D[1, 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 97,
    "metadata": {},
    "outputs": [
@@ -378,7 +459,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "113_Python",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
