add class_demo notes1

--- a/class_demo.ipynb
+++ b/class_demo.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "成功存入 500 元。\n",
+      "王小明 的帳戶餘額為: 1500 元。\n",
+      "成功提款 300 元。\n",
+      "王小明 的帳戶餘額為: 1200 元。\n"
+     ]
+    }
+   ],
    "source": [
     "class BankAccount:\n",
     "    def __init__(self, account_holder, balance=0):\n",
@@ -54,7 +65,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.10"
   }
  },
