--- a/02_matrix.ipynb
+++ b/02_matrix.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -42,11 +42,11 @@
       " [11 15  1  7 16 16]\n",
       " [ 8  5 12 12 10 16]]\n",
       "\n",
-      "matrix_A * matrix_B: \n",
-      "[[20  0  0  9 35  0]\n",
-      " [ 6 15 16  4 21 18]\n",
-      " [24 56  0  6 63 63]\n",
-      " [ 0  4 35 27 16 63]]\n"
+      "matrix_A - matrix_B: \n",
+      "[[ 1 -3  3  0  2  9]\n",
+      " [ 1  2 -6  3  4  3]\n",
+      " [ 5  1  1  5 -2 -2]\n",
+      " [ 8 -3 -2  6  6  2]]\n"
      ]
     }
    ],
@@ -123,6 +123,119 @@
     "print( f\"matrix_A: \\n{matrix_A}\") # print matrix_A\n",
     "print( f\"\\nmatrix_B: \\n{matrix_B}\") # print matrix_B\n",
     "print( f\"\\nmatrix_A * matrix_B: \\n{matrix_AB}\") # print matrix_AB"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 內積/點積 (Dot production)\n",
+    "\n",
+    "內積是一種專門用於向量 (Vector) 的矩陣乘法，結果是一個純量 (scalar)，而非矩陣或向量。\n",
+    "\n",
+    "- **操作**：給定兩個相同長度的向量 $\\mathbf{a}$ 和 $\\mathbf{b}$，點積的計算方式如下：\n",
+    "\n",
+    "$$\\mathbf{a} \\cdot \\mathbf{b} = \\sum_{i=1}^{n} a_i \\times b_i$$\n",
+    "\n",
+    "  其中 $a_i$ 和 $b_i$ 是向量 $\\mathbf{a}$ 和 $\\mathbf{b}$ 的各個分量。\n",
+    "\n",
+    "- **結果**：點積的結果是一個標量值。\n",
+    "- **範例**：如果 $\\mathbf{a} = [1, 2, 3]$ 和 $\\mathbf{b} = [4, 5, 6]$，則點積為：\n",
+    "\n",
+    "$$\\mathbf{a} \\cdot \\mathbf{b} = (1 \\times 4) + (2 \\times 5) + (3 \\times 6) = 32$$\n",
+    "\n",
+    "- **幾何意義**：點積反映了一個向量在另一個向量方向上的延伸量，它與兩向量之間的夾角的餘弦相關：\n",
+    "\n",
+    "$$\\mathbf{a} \\cdot \\mathbf{b} = |\\mathbf{a}| |\\mathbf{b}| \\cos(\\theta)$$\n",
+    "  其中 $\\theta$ 是向量 $\\mathbf{a}$ 和 $\\mathbf{b}$ 之間的夾角。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Example\n",
+    "- **Input Vectors**:\n",
+    "  - $a = [1, 2, 3]$\n",
+    "  - $b = [4, 5, 6]$\n",
+    "- **Dot Product**:\n",
+    "  $$a \\cdot b = (1 \\times 4) + (2 \\times 5) + (3 \\times 6) = 32$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dot product of vectors a and b: 32\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Define two vectors a and b\n",
+    "a = np.array([1, 2, 3])\n",
+    "b = np.array([4, 5, 6])\n",
+    "\n",
+    "# Compute the dot product\n",
+    "dot_product = np.dot(a, b)\n",
+    "\n",
+    "# Print the result\n",
+    "print( f\"Dot product of vectors a and b: {dot_product}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Dot production for two matrices\n",
+    "- **Input Matrices**:\n",
+    "  - $A$ is a $4\\times3$ matrix.\n",
+    "  - $B$ is a $3\\times4$ matrix.\n",
+    "- **Dot Product**: The `np.dot()` function computes the matrix product (dot product) of $A$ and $B$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dot product of matrices A and B:\n",
+      "[[ 30  24  18  24]\n",
+      " [ 84  69  54  54]\n",
+      " [138 114  90  84]\n",
+      " [ 30  25  20  16]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Define two matrices A and B\n",
+    "A = np.array( [ [1, 2, 3],\n",
+    "                [4, 5, 6],\n",
+    "                [7, 8, 9],\n",
+    "                [2, 1, 2]] )\n",
+    "\n",
+    "B = np.array( [ [9, 8, 7, 1],\n",
+    "                [6, 5, 4, 4],\n",
+    "                [3, 2, 1, 5] ] )\n",
+    "\n",
+    "# Compute the dot product\n",
+    "dot_product = np.dot(A, B)\n",
+    "\n",
+    "# Print the result\n",
+    "print(\"Dot product of matrices A and B:\")\n",
+    "print(dot_product)"
    ]
   }
  ],
