update stack notes

--- a/03_stack.ipynb
+++ b/03_stack.ipynb
@@ -184,6 +184,249 @@
     "        s.showAll()\n",
     "    print(\"bye\\n\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Hanoi Tower problem\n",
+    "- Tower of Hanoi, is a mathematical puzzle which consists of three towers (pegs) and more than one rings is as depicted\n",
+    "- **Rules**: The mission is to move all the disks to some another tower without violating the sequence of arrangement. A few rules to be followed for Tower of Hanoi are\n",
+    "- Only one disk can be moved among the towers at any given time.\n",
+    "- Only the \"top\" disk can be removed.\n",
+    "- No large disk can sit over a small disk."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A: [5, 4, 3, 2, 1]\n",
+      "B: []\n",
+      "C: []\n",
+      "--------------------\n",
+      "A: [5, 4, 3, 2]\n",
+      "B: []\n",
+      "C: [1]\n",
+      "--------------------\n",
+      "A: [5, 4, 3]\n",
+      "B: [2]\n",
+      "C: [1]\n",
+      "--------------------\n",
+      "A: [5, 4, 3]\n",
+      "B: [2, 1]\n",
+      "C: []\n",
+      "--------------------\n",
+      "A: [5, 4]\n",
+      "B: [2, 1]\n",
+      "C: [3]\n",
+      "--------------------\n",
+      "A: [5, 4, 1]\n",
+      "B: [2]\n",
+      "C: [3]\n",
+      "--------------------\n",
+      "A: [5, 4, 1]\n",
+      "B: []\n",
+      "C: [3, 2]\n",
+      "--------------------\n",
+      "A: [5, 4]\n",
+      "B: []\n",
+      "C: [3, 2, 1]\n",
+      "--------------------\n",
+      "A: [5]\n",
+      "B: [4]\n",
+      "C: [3, 2, 1]\n",
+      "--------------------\n",
+      "A: [5]\n",
+      "B: [4, 1]\n",
+      "C: [3, 2]\n",
+      "--------------------\n",
+      "A: [5, 2]\n",
+      "B: [4, 1]\n",
+      "C: [3]\n",
+      "--------------------\n",
+      "A: [5, 2, 1]\n",
+      "B: [4]\n",
+      "C: [3]\n",
+      "--------------------\n",
+      "A: [5, 2, 1]\n",
+      "B: [4, 3]\n",
+      "C: []\n",
+      "--------------------\n",
+      "A: [5, 2]\n",
+      "B: [4, 3]\n",
+      "C: [1]\n",
+      "--------------------\n",
+      "A: [5]\n",
+      "B: [4, 3, 2]\n",
+      "C: [1]\n",
+      "--------------------\n",
+      "A: [5]\n",
+      "B: [4, 3, 2, 1]\n",
+      "C: []\n",
+      "--------------------\n",
+      "A: []\n",
+      "B: [4, 3, 2, 1]\n",
+      "C: [5]\n",
+      "--------------------\n",
+      "A: [1]\n",
+      "B: [4, 3, 2]\n",
+      "C: [5]\n",
+      "--------------------\n",
+      "A: [1]\n",
+      "B: [4, 3]\n",
+      "C: [5, 2]\n",
+      "--------------------\n",
+      "A: []\n",
+      "B: [4, 3]\n",
+      "C: [5, 2, 1]\n",
+      "--------------------\n",
+      "A: [3]\n",
+      "B: [4]\n",
+      "C: [5, 2, 1]\n",
+      "--------------------\n",
+      "A: [3]\n",
+      "B: [4, 1]\n",
+      "C: [5, 2]\n",
+      "--------------------\n",
+      "A: [3, 2]\n",
+      "B: [4, 1]\n",
+      "C: [5]\n",
+      "--------------------\n",
+      "A: [3, 2, 1]\n",
+      "B: [4]\n",
+      "C: [5]\n",
+      "--------------------\n",
+      "A: [3, 2, 1]\n",
+      "B: []\n",
+      "C: [5, 4]\n",
+      "--------------------\n",
+      "A: [3, 2]\n",
+      "B: []\n",
+      "C: [5, 4, 1]\n",
+      "--------------------\n",
+      "A: [3]\n",
+      "B: [2]\n",
+      "C: [5, 4, 1]\n",
+      "--------------------\n",
+      "A: [3]\n",
+      "B: [2, 1]\n",
+      "C: [5, 4]\n",
+      "--------------------\n",
+      "A: []\n",
+      "B: [2, 1]\n",
+      "C: [5, 4, 3]\n",
+      "--------------------\n",
+      "A: [1]\n",
+      "B: [2]\n",
+      "C: [5, 4, 3]\n",
+      "--------------------\n",
+      "A: [1]\n",
+      "B: []\n",
+      "C: [5, 4, 3, 2]\n",
+      "--------------------\n",
+      "A: []\n",
+      "B: []\n",
+      "C: [5, 4, 3, 2, 1]\n",
+      "--------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "class stack:\n",
+    "    def __init__(self):\n",
+    "        self.stack = []\n",
+    "        \n",
+    "    def push(self, x):\n",
+    "        self.stack.append(x)\n",
+    "        \n",
+    "    def pop(self):\n",
+    "        if len(self.stack) == 0:\n",
+    "            return None\n",
+    "        return self.stack.pop()\n",
+    "    \n",
+    "    def top(self):\n",
+    "        if len(self.stack) == 0:\n",
+    "            return None\n",
+    "        return self.stack[-1]\n",
+    "    \n",
+    "    def size(self):\n",
+    "        return len(self.stack)\n",
+    "    \n",
+    "    def isEmpty(self):\n",
+    "        return len(self.stack) == 0\n",
+    "    \n",
+    "    def showAll(self):\n",
+    "        print( self.stack)\n",
+    "\n",
+    "class Hanoi:\n",
+    "    def __init__(self, n):\n",
+    "        self.n = n\n",
+    "        self.A = stack()\n",
+    "        self.B = stack()\n",
+    "        self.C = stack()\n",
+    "        for i in range(n, 0, -1):\n",
+    "            self.A.push(i)\n",
+    "            \n",
+    "    def move(self, n, source, target, auxiliary):\n",
+    "        if n > 0:\n",
+    "            self.move(n-1, source, auxiliary, target)\n",
+    "            target.push(source.pop())\n",
+    "            self.show()\n",
+    "            self.move(n-1, auxiliary, target, source)\n",
+    "            \n",
+    "    def show(self):\n",
+    "        print(\"A: \", end=\"\")\n",
+    "        self.A.showAll()\n",
+    "        print(\"B: \", end=\"\")\n",
+    "        self.B.showAll()\n",
+    "        print(\"C: \", end=\"\")\n",
+    "        self.C.showAll()\n",
+    "        print(\"--\"*10)\n",
+    "        \n",
+    "    def solve(self):\n",
+    "        self.show()\n",
+    "        self.move(self.n, self.A, self.C, self.B)\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    n = int(input(\"Enter the number of disks: \"))\n",
+    "    h = Hanoi(n)\n",
+    "    h.solve()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5, 4, [1, 2, 3, 4])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = [1, 2, 3, 4, 5]\n",
+    "x = data.pop()\n",
+    "x, len(data), data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
