--- a/03_stack.ipynb
+++ b/03_stack.ipynb
@@ -189,6 +189,85 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Exercise: Verifying Balanced Parentheses in Expressions\n",
+    "- A common problem in compiler design is verifying whether the parentheses (or brackets) in an expression are balanced. A stack can be used to check the balance of parentheses (or brackets) in a given expression, which may include different types of brackets such as ( ), { }, and [ ].\n",
+    "- Write a function to check if an expression containing parentheses, braces, and square brackets is balanced. An expression is considered balanced if:\n",
+    "- Every opening bracket ((, {, [) has a corresponding closing bracket (), }, ]).\n",
+    "- The brackets are correctly nested.\n",
+    "- Example Inputs and Outputs:\n",
+    "  - Input: { [ ( ) ] }    =>    Output: Balanced\n",
+    "  - Input: { [ ( ] ) }    =>    Output: Not Balanced\n",
+    "  - Input: ( [ { } ] )    =>    Output: Balanced\n",
+    "  - Input: ( ( ( ) )      =>    Output: Not Balanced\n",
+    "  - (2+3)-4 * 8 % [2 / 4 -9 { 1-5 ] / a + b)}\n",
+    "  - {(2+3)-4 * 8 % [2 / 4 -9] { 1-5 } / a + b}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "check result: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Stack:\n",
+    "    def __init__(self):\n",
+    "        self.stack = []\n",
+    "        \n",
+    "    def push(self, x):\n",
+    "        self.stack.append(x)\n",
+    "        \n",
+    "    def pop(self):\n",
+    "        if len(self.stack) == 0:\n",
+    "            return None\n",
+    "        return self.stack.pop()\n",
+    "    \n",
+    "    def top(self):\n",
+    "        if len(self.stack) == 0:\n",
+    "            return None\n",
+    "        return self.stack[-1]\n",
+    "    \n",
+    "    def size(self):\n",
+    "        return len(self.stack)\n",
+    "    \n",
+    "    def isEmpty(self):\n",
+    "        return len(self.stack) == 0\n",
+    "    \n",
+    "    def showAll(self):\n",
+    "        print(self.stack)\n",
+    "\n",
+    "def checkBalancedParentheses(s):\n",
+    "    stack = Stack()\n",
+    "    for c in s:\n",
+    "        if c in ['(', '[', '{']:\n",
+    "            stack.push(c)\n",
+    "        elif c == ')':\n",
+    "            if stack.isEmpty() or stack.pop() != '(':\n",
+    "                return False\n",
+    "        elif c == ']':\n",
+    "            if stack.isEmpty() or stack.pop() != '[':\n",
+    "                return False\n",
+    "        elif c == '}':\n",
+    "            if stack.isEmpty() or stack.pop() != '{':\n",
+    "                return False\n",
+    "    return stack.isEmpty()\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    s = Stack()\n",
+    "    print( f\"check result: {checkBalancedParentheses( input('Enter the string: '))}\" )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Hanoi Tower problem\n",
     "- Tower of Hanoi, is a mathematical puzzle which consists of three towers (pegs) and more than one rings is as depicted\n",
     "- **Rules**: The mission is to move all the disks to some another tower without violating the sequence of arrangement. A few rules to be followed for Tower of Hanoi are\n",
@@ -338,6 +417,7 @@
     }
    ],
    "source": [
+    "# Hanoi Tower\n",
     "class stack:\n",
     "    def __init__(self):\n",
     "        self.stack = []\n",
@@ -397,107 +477,6 @@
     "    n = int(input(\"Enter the number of disks: \"))\n",
     "    h = Hanoi(n)\n",
     "    h.solve()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(5, 4, [1, 2, 3, 4])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data = [1, 2, 3, 4, 5]\n",
-    "x = data.pop()\n",
-    "x, len(data), data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Exercise: Verifying Balanced Parentheses in Expressions\n",
-    "- A common problem in compiler design is verifying whether the parentheses (or brackets) in an expression are balanced. A stack can be used to check the balance of parentheses (or brackets) in a given expression, which may include different types of brackets such as ( ), { }, and [ ].\n",
-    "- Write a function to check if an expression containing parentheses, braces, and square brackets is balanced. An expression is considered balanced if:\n",
-    "- Every opening bracket ((, {, [) has a corresponding closing bracket (), }, ]).\n",
-    "- The brackets are correctly nested.\n",
-    "- Example Inputs and Outputs:\n",
-    "  - Input: { [ ( ) ] }    =>    Output: Balanced\n",
-    "  - Input: { [ ( ] ) }    =>    Output: Not Balanced\n",
-    "  - Input: ( [ { } ] )    =>    Output: Balanced\n",
-    "  - Input: ( ( ( ) )      =>    Output: Not Balanced\n",
-    "  - (2+3)-4 * 8 % [2 / 4 -9 { 1-5 ] / a + b)}\n",
-    "  - {(2+3)-4 * 8 % [2 / 4 -9] { 1-5 } / a + b}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "check result: True\n"
-     ]
-    }
-   ],
-   "source": [
-    "class Stack:\n",
-    "    def __init__(self):\n",
-    "        self.stack = []\n",
-    "        \n",
-    "    def push(self, x):\n",
-    "        self.stack.append(x)\n",
-    "        \n",
-    "    def pop(self):\n",
-    "        if len(self.stack) == 0:\n",
-    "            return None\n",
-    "        return self.stack.pop()\n",
-    "    \n",
-    "    def top(self):\n",
-    "        if len(self.stack) == 0:\n",
-    "            return None\n",
-    "        return self.stack[-1]\n",
-    "    \n",
-    "    def size(self):\n",
-    "        return len(self.stack)\n",
-    "    \n",
-    "    def isEmpty(self):\n",
-    "        return len(self.stack) == 0\n",
-    "    \n",
-    "    def showAll(self):\n",
-    "        print(self.stack)\n",
-    "\n",
-    "def checkBalancedParentheses(s):\n",
-    "    stack = Stack()\n",
-    "    for c in s:\n",
-    "        if c in ['(', '[', '{']:\n",
-    "            stack.push(c)\n",
-    "        elif c == ')':\n",
-    "            if stack.isEmpty() or stack.pop() != '(':\n",
-    "                return False\n",
-    "        elif c == ']':\n",
-    "            if stack.isEmpty() or stack.pop() != '[':\n",
-    "                return False\n",
-    "        elif c == '}':\n",
-    "            if stack.isEmpty() or stack.pop() != '{':\n",
-    "                return False\n",
-    "    return stack.isEmpty()\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "    s = Stack()\n",
-    "    print( f\"check result: {checkBalancedParentheses( input('Enter the string: '))}\" )"
    ]
   }
  ],
