--- a/03_stack.ipynb
+++ b/03_stack.ipynb
@@ -278,140 +278,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A: [5, 4, 3, 2, 1]\n",
+      "A: [2, 1]\n",
       "B: []\n",
       "C: []\n",
       "--------------------\n",
-      "A: [5, 4, 3, 2]\n",
-      "B: []\n",
-      "C: [1]\n",
-      "--------------------\n",
-      "A: [5, 4, 3]\n",
-      "B: [2]\n",
-      "C: [1]\n",
-      "--------------------\n",
-      "A: [5, 4, 3]\n",
-      "B: [2, 1]\n",
-      "C: []\n",
-      "--------------------\n",
-      "A: [5, 4]\n",
-      "B: [2, 1]\n",
-      "C: [3]\n",
-      "--------------------\n",
-      "A: [5, 4, 1]\n",
-      "B: [2]\n",
-      "C: [3]\n",
-      "--------------------\n",
-      "A: [5, 4, 1]\n",
-      "B: []\n",
-      "C: [3, 2]\n",
-      "--------------------\n",
-      "A: [5, 4]\n",
-      "B: []\n",
-      "C: [3, 2, 1]\n",
-      "--------------------\n",
-      "A: [5]\n",
-      "B: [4]\n",
-      "C: [3, 2, 1]\n",
-      "--------------------\n",
-      "A: [5]\n",
-      "B: [4, 1]\n",
-      "C: [3, 2]\n",
-      "--------------------\n",
-      "A: [5, 2]\n",
-      "B: [4, 1]\n",
-      "C: [3]\n",
-      "--------------------\n",
-      "A: [5, 2, 1]\n",
-      "B: [4]\n",
-      "C: [3]\n",
-      "--------------------\n",
-      "A: [5, 2, 1]\n",
-      "B: [4, 3]\n",
-      "C: []\n",
-      "--------------------\n",
-      "A: [5, 2]\n",
-      "B: [4, 3]\n",
-      "C: [1]\n",
-      "--------------------\n",
-      "A: [5]\n",
-      "B: [4, 3, 2]\n",
-      "C: [1]\n",
-      "--------------------\n",
-      "A: [5]\n",
-      "B: [4, 3, 2, 1]\n",
+      "A: [2]\n",
+      "B: [1]\n",
       "C: []\n",
       "--------------------\n",
       "A: []\n",
-      "B: [4, 3, 2, 1]\n",
-      "C: [5]\n",
-      "--------------------\n",
-      "A: [1]\n",
-      "B: [4, 3, 2]\n",
-      "C: [5]\n",
-      "--------------------\n",
-      "A: [1]\n",
-      "B: [4, 3]\n",
-      "C: [5, 2]\n",
-      "--------------------\n",
-      "A: []\n",
-      "B: [4, 3]\n",
-      "C: [5, 2, 1]\n",
-      "--------------------\n",
-      "A: [3]\n",
-      "B: [4]\n",
-      "C: [5, 2, 1]\n",
-      "--------------------\n",
-      "A: [3]\n",
-      "B: [4, 1]\n",
-      "C: [5, 2]\n",
-      "--------------------\n",
-      "A: [3, 2]\n",
-      "B: [4, 1]\n",
-      "C: [5]\n",
-      "--------------------\n",
-      "A: [3, 2, 1]\n",
-      "B: [4]\n",
-      "C: [5]\n",
-      "--------------------\n",
-      "A: [3, 2, 1]\n",
-      "B: []\n",
-      "C: [5, 4]\n",
-      "--------------------\n",
-      "A: [3, 2]\n",
-      "B: []\n",
-      "C: [5, 4, 1]\n",
-      "--------------------\n",
-      "A: [3]\n",
-      "B: [2]\n",
-      "C: [5, 4, 1]\n",
-      "--------------------\n",
-      "A: [3]\n",
-      "B: [2, 1]\n",
-      "C: [5, 4]\n",
-      "--------------------\n",
-      "A: []\n",
-      "B: [2, 1]\n",
-      "C: [5, 4, 3]\n",
-      "--------------------\n",
-      "A: [1]\n",
-      "B: [2]\n",
-      "C: [5, 4, 3]\n",
-      "--------------------\n",
-      "A: [1]\n",
-      "B: []\n",
-      "C: [5, 4, 3, 2]\n",
+      "B: [1]\n",
+      "C: [2]\n",
       "--------------------\n",
       "A: []\n",
       "B: []\n",
-      "C: [5, 4, 3, 2, 1]\n",
+      "C: [2, 1]\n",
+      "--------------------\n",
+      "A: []\n",
+      "B: []\n",
+      "C: [2, 1]\n",
       "--------------------\n"
      ]
     }
@@ -468,10 +360,27 @@
     "        print(\"C: \", end=\"\")\n",
     "        self.C.showAll()\n",
     "        print(\"--\"*10)\n",
-    "        \n",
+    "\n",
+    "    def testHanoi(self, n, source, target, auxiliary):\n",
+    "        if n > 0:\n",
+    "            # self.show()\n",
+    "            if n == 1:\n",
+    "                target.push(source.pop())\n",
+    "                self.show()\n",
+    "            elif n == 2:\n",
+    "                auxiliary.push(source.pop())\n",
+    "                self.show()\n",
+    "                target.push(source.pop())\n",
+    "                self.show()\n",
+    "                target.push(auxiliary.pop())\n",
+    "                self.show()\n",
+    "            elif n % 2 == 1:\n",
+    "                while self.A.size() > 1 and self.C.size() < n:\n",
+    "\n",
     "    def solve(self):\n",
     "        self.show()\n",
-    "        self.move(self.n, self.A, self.C, self.B)\n",
+    "        self.testHanoi(self.n, self.A, self.C, self.B)\n",
+    "        # self.move(self.n, self.A, self.C, self.B)\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    n = int(input(\"Enter the number of disks: \"))\n",
