update queue notes

--- a/04_Queue.ipynb
+++ b/04_Queue.ipynb
@@ -5,25 +5,23 @@
    "metadata": {},
    "source": [
     "# Queue\n",
+    "## Exercise 1: \n",
     "\n",
-    "- 在資料結構與演算法中， **佇列 (Queue)** 是一種線性資料結構，遵循 **先進先出 (FIFO, First-In-First-Out)** 的原則。\n",
-    "- 在佇列中，第一個加入的元素將會是第一個被移除的，這就像排隊一樣，先到的人會先被服務。\n",
+    "Create a `Queue` class with the following methods and implement a menu-driven program to interact with the queue.\n",
     "\n",
-    "### 佇列的特點\n",
-    "- **FIFO順序**：元素從尾端（後端）加入，並從前端移除。\n",
-    "- **基本操作**：\n",
-    "  - **Enqueue**：將元素加入佇列的尾端。\n",
-    "  - **Dequeue**：從佇列的前端移除元素。\n",
-    "  - **Peek/Front**：查看佇列的前端元素，但不移除。\n",
-    "  - **IsEmpty**：檢查佇列是否為空。\n",
-    "  - **Size**：返回佇列中元素的數量。\n",
+    "#### Requirements:\n",
+    "1. Define a `Queue` class with the following methods:\n",
+    "   - `enqueue(n)`: Adds a number `n` to the queue.\n",
+    "   - `dequeue()`: Removes and returns a number from the front of the queue. If the queue is empty, display a message indicating this.\n",
+    "   - `is_empty()`: Checks if the queue is empty and returns `True` or `False`.\n",
+    "   - `size()`: Returns the number of items currently in the queue.\n",
     "\n",
-    "### 佇列的應用\n",
-    "佇列廣泛應用於以下場合：\n",
-    "1. **任務排程**：例如在操作系統中管理進程。\n",
-    "2. **資料緩衝**：處理數據流，例如I/O緩衝區。\n",
-    "3. **廣度優先搜尋 (BFS)**：在圖形遍歷中應用。\n",
-    "4. **列印緩衝**：管理列印文件的順序。"
+    "2. Implement a menu with the following options:\n",
+    "   - **Option 0**: Exit the program.\n",
+    "   - **Option 1**: Add a number to the queue.\n",
+    "   - **Option 2**: Remove a number from the queue.\n",
+    "   - **Option 3**: Check if the queue is empty.\n",
+    "   - **Option 4**: Display the number of items in the queue."
    ]
   },
   {
@@ -42,7 +40,41 @@
     "    def is_empty(self):\n",
     "        return len(self.queue) == 0\n",
     "    def size(self):\n",
-    "        return len(self.queue)"
+    "        return len(self.queue)\n",
+    "\n",
+    "def menu():\n",
+    "    print(\"1. Enqueue\")\n",
+    "    print(\"2. Dequeue\")\n",
+    "    print(\"3. Is Empty\")\n",
+    "    print(\"4. Size\")\n",
+    "    print(\"0. Exit\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    queue = Queue()\n",
+    "    while True:\n",
+    "        menu()\n",
+    "        choice = int(input(\"Enter choice: \"))\n",
+    "        if choice == 1:\n",
+    "            item = input(\"Enter item: \")\n",
+    "            queue.enqueue(item)\n",
+    "        elif choice == 2:\n",
+    "            if queue.is_empty():\n",
+    "                print(\"Queue is empty\")\n",
+    "            else:\n",
+    "                print(\"Dequeued item: \", queue.dequeue())\n",
+    "        elif choice == 3:\n",
+    "            if queue.is_empty():\n",
+    "                print(\"Queue is empty\")\n",
+    "            else:\n",
+    "                print(\"Queue is not empty\")\n",
+    "        elif choice == 4:\n",
+    "            print(\"Size of queue: \", queue.size())\n",
+    "        elif choice == 0:\n",
+    "            break\n",
+    "        else:\n",
+    "            print(\"Invalid choice\")\n",
+    "        print()\n",
+    "    "
    ]
   }
  ],
