add linked list

--- a/04_Queue.ipynb
+++ b/04_Queue.ipynb
@@ -5,6 +5,78 @@
    "metadata": {},
    "source": [
     "# Queue\n",
+    "### Queue Class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[21]\n",
+      "[21, 12]\n",
+      "[21, 12, 39]\n",
+      "[21, 12, 39, 58]\n",
+      "[21, 12, 39, 58, 44]\n",
+      "take element from queue: 21\n",
+      "take element from queue: 12\n",
+      "take element from queue: 39\n",
+      "take element from queue: 58\n",
+      "queue size: 1\n",
+      "empty queue? => False\n",
+      "[44, 34]\n",
+      "[44, 34, 77]\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Queue:\n",
+    "    def __init__(self):\n",
+    "        self.queue = []\n",
+    "        \n",
+    "    def push(self, x):\n",
+    "        self.queue.append(x)\n",
+    "        self.show()\n",
+    "        \n",
+    "    def pop(self):\n",
+    "        if len(self.queue) == 0:\n",
+    "            return None\n",
+    "        return self.queue.pop(0)\n",
+    "    \n",
+    "    def size(self):\n",
+    "        return len(self.queue)\n",
+    "    \n",
+    "    def is_empty(self):\n",
+    "        return len(self.queue) == 0\n",
+    "    \n",
+    "    def show(self):\n",
+    "        print(self.queue)\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    q = Queue()\n",
+    "    q.push( 21 )\n",
+    "    q.push( 12 )\n",
+    "    q.push( 39 )\n",
+    "    q.push( 58 )\n",
+    "    q.push( 44 )\n",
+    "    print( f\"take element from queue: { q.pop() }\" )\n",
+    "    print( f\"take element from queue: { q.pop() }\" )\n",
+    "    print( f\"take element from queue: { q.pop() }\" )\n",
+    "    print( f\"take element from queue: { q.pop() }\" )\n",
+    "    print( f\"queue size: { q.size() }\" )\n",
+    "    print( f\"empty queue? => { q.is_empty() }\" )\n",
+    "    q.push( 34 )\n",
+    "    q.push( 77 )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Exercise 1: \n",
     "\n",
     "Create a `Queue` class with the following methods and implement a menu-driven program to interact with the queue.\n",
@@ -26,27 +98,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. Enqueue\n",
+      "2. Dequeue\n",
+      "3. Is Empty\n",
+      "4. Size\n",
+      "5. show queue content\n",
+      "0. Exit\n",
+      "\n",
+      "1. Enqueue\n",
+      "2. Dequeue\n",
+      "3. Is Empty\n",
+      "4. Size\n",
+      "5. show queue content\n",
+      "0. Exit\n",
+      "\n",
+      "1. Enqueue\n",
+      "2. Dequeue\n",
+      "3. Is Empty\n",
+      "4. Size\n",
+      "5. show queue content\n",
+      "0. Exit\n",
+      "Dequeued item:  48\n",
+      "\n",
+      "1. Enqueue\n",
+      "2. Dequeue\n",
+      "3. Is Empty\n",
+      "4. Size\n",
+      "5. show queue content\n",
+      "0. Exit\n",
+      "Queue is not empty\n",
+      "\n",
+      "1. Enqueue\n",
+      "2. Dequeue\n",
+      "3. Is Empty\n",
+      "4. Size\n",
+      "5. show queue content\n",
+      "0. Exit\n",
+      "Size of queue:  1\n",
+      "\n",
+      "1. Enqueue\n",
+      "2. Dequeue\n",
+      "3. Is Empty\n",
+      "4. Size\n",
+      "5. show queue content\n",
+      "0. Exit\n",
+      "['88']\n",
+      "\n",
+      "1. Enqueue\n",
+      "2. Dequeue\n",
+      "3. Is Empty\n",
+      "4. Size\n",
+      "5. show queue content\n",
+      "0. Exit\n"
+     ]
+    }
+   ],
    "source": [
     "class Queue:\n",
     "    def __init__(self):\n",
     "        self.queue = []\n",
+    "        \n",
     "    def enqueue(self, item):\n",
     "        self.queue.append(item)\n",
+    "        self.show()\n",
+    "        \n",
     "    def dequeue(self):\n",
     "        return self.queue.pop(0)\n",
+    "    \n",
     "    def is_empty(self):\n",
     "        return len(self.queue) == 0\n",
+    "    \n",
     "    def size(self):\n",
     "        return len(self.queue)\n",
+    "    \n",
+    "    def show(self):\n",
+    "        print(self.queue)\n",
     "\n",
     "def menu():\n",
     "    print(\"1. Enqueue\")\n",
     "    print(\"2. Dequeue\")\n",
     "    print(\"3. Is Empty\")\n",
     "    print(\"4. Size\")\n",
+    "    print(\"5. show queue content\")\n",
     "    print(\"0. Exit\")\n",
     "\n",
     "if __name__ == \"__main__\":\n",
@@ -62,6 +202,7 @@
     "                print(\"Queue is empty\")\n",
     "            else:\n",
     "                print(\"Dequeued item: \", queue.dequeue())\n",
+    "                queue.show()\n",
     "        elif choice == 3:\n",
     "            if queue.is_empty():\n",
     "                print(\"Queue is empty\")\n",
@@ -69,6 +210,8 @@
     "                print(\"Queue is not empty\")\n",
     "        elif choice == 4:\n",
     "            print(\"Size of queue: \", queue.size())\n",
+    "        elif choice == 5:\n",
+    "            queue.show()\n",
     "        elif choice == 0:\n",
     "            break\n",
     "        else:\n",
